# fantia

./: README.md  cookies  pyproject.toml
fantia/: __main__.py  api.py  auth.py  config.py  utils.py
