[tool.poetry]
name = "fantia"
version = "0.0.1"
description = "Fantia download and sync tool"
authors = ["Tianyi Shi <ShiTianyi2001@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
path = "^15.1.2"
requests = "^2.25.1"
lxml = "^4.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
